# MyGM

./: .gitignore  .gitmodules  API.md  CMakeLists.txt  README.md  changelog.md  setup.md
cmake/: InitMyCMake.cmake
config/: Config.cmake.in  natvis.in
demo/: CMakeLists.txt  main.cpp
include/MyGM/: MyGM  MyGM.hpp  basic.h  basic.hpp  bbox.h  bbox.hpp  config.h  config.hpp  euler.h  euler.hpp  hvec.h  hvec.hpp  line.h  line.hpp  mat.h  mat.hpp  material.h  material.hpp  normal.h  normal.hpp  plane.h  plane.hpp  point.h  point.hpp  quat.h  quat.hpp  ray.h  ray.hpp  rgb.h  rgb.hpp  rgba.h  rgba.hpp  sample.h  sample.hpp  scale.h  scale.hpp  svec.h  svec.hpp  transform.h  transform.hpp  (+7 more)
include/MyGM/Interfaces/: Arg.h  IAdd.h  IAdd.hpp  IAffine.h  IAffine.hpp  IAffineRealSubspace.h  IAffineRealSubspace.hpp  IAffineSubspace.h  IAffineSubspace.hpp  IInOut.h  IInOut.hpp  IInnerProduct.h  IInnerProduct.hpp  ILine.h  ILine.hpp  ILinear.h  ILinear.hpp  IMetric.h  IMetric.hpp  IMul.h  IMul.hpp  INorm.h  INorm.hpp  IOLine.h  IOLine.hpp  IOPlane.h  IOPlane.hpp  IPlane.h  IPlane.hpp  IRing.h  IRing.hpp  IScalarMul.h  IScalarMul.hpp  ImplTraits.h  ImplTraits.hpp
include/MyGM/Interfaces/IArray/: IArray.h  IArray.hpp  IArray1D.h  IArray1D.hpp  IArray1D_Util.h  IArray1D_Util.hpp  IArrayAdd.h  IArrayAdd.hpp  IArrayCast.h  IArrayCast.hpp  IArrayHadamardProduct.h  IArrayHadamardProduct.hpp  IArrayInOut.h  IArrayInOut.hpp  IArrayLinear.h  IArrayLinear.hpp  IArrayScalarMul.h  IArrayScalarMul.hpp  IArrayUtil.h  IArrayUtil.hpp  ICross.h  ICross.hpp  IEuclideanA.h  IEuclideanA.hpp  IEuclideanAS.h  IEuclideanLine.h  IEuclideanV.h  IEuclideanV.hpp
include/MyGM/Interfaces/IMatrix/: IMatrix.h  IMatrix.hpp  IMatrixInOut.h  IMatrixInOut.hpp  IMatrixMul.h  IMatrixMul.hpp  IMatrixMul_detail.h  IMatrixUtil.h  IMatrix_detail.h
include/MyGM/Interfaces/IQuat/: IQuat.h  IQuatInOut.h  IQuatMul.h
include/MyGM/detail/: basic.inl  bbox.inl  euler.inl  forward_decl.h  hvec.inl  line.inl  material.inl  normal.inl  plane.inl  point.inl  quat.inl  ray.inl  sample.inl  svec.inl  traits.h  transform.inl  val.inl  vec.inl
include/MyGM/details/: basic.inl  bbox.inl  euler.inl  forward_decl.h  forward_decl.hpp  hvec.inl  line.inl  material.inl  normal.inl  plane.inl  point.inl  quat.inl  ray.inl  sample.inl  svec.inl  traits.h  traits.hpp  transform.inl  triangle.inl  val.inl
include/MyMath/: IVal.h  Merge.h  Point.h  Val.h  Vec.h  basic.h  mat.h  point.h  quat.h  rgb.h  scale.h  val.h  vec.h
include/MyMath/Interfaces/: Arg.h  IAdd.h  IAffine.h  IArray.h  IEuclidean.h  IInnerProduct.h  ILinear.h  IMetric.h  IMul.h  INorm.h  IScalarMul.h  IVal.h  IVec.h
include/MyMath/Interfaces/IArray/: IArray.h  IArray1D.h  IArrayAdd.h  IArrayInOut.h  IArrayScalarMul.h  IEuclidean.h  IEuclideanA.h  IEuclideanV.h
src/EMPTY/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/test/00/: main.cpp
src/test/00_Val/: main.cpp
src/test/00_val/: main.cpp
src/test/01_Vec/: main.cpp
src/test/01_vec/: main.cpp
src/test/02_Point/: main.cpp
src/test/02_point/: CMakeLists.txt  main.cpp
src/test/03_mat/: main.cpp
src/test/04_rgb_scale/: CMakeLists.txt  main.cpp
src/test/05_quat/: main.cpp
src/test/06_transform/: main.cpp
src/test/07_bbox/: main.cpp
src/test/08_line/: main.cpp
src/test/08_ray/: main.cpp
src/test/09_ray/: main.cpp
src/test/10_simd/: main.cpp
src/test/11_hvec/: main.cpp
src/test/12_v3/: CMakeLists.txt  main.cpp
vs/: MyGM.natvis
(+11 files in other folders)
