CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

PROJECT(MyGM VERSION 0.6.13 LANGUAGES CXX)
MESSAGE(STATUS "Project: ${PROJECT_NAME} ${PROJECT_VERSION}")

INCLUDE(cmake/InitMyCMake.cmake)
INIT_MYCMAKE()

INIT_PROJECT()

OPTION(MYGM_USE_SIMD "Use SIMD" TRUE)
OPTION(MYGM_USE_SSE_4_1 "Use SSE 4.1" TRUE)

ADD_DEP(MyTemplate 0.4.8)

ADD_SUB_DIRS_REC(include)
ADD_SUB_DIRS_REC(src)

EXPORT_TARGETS(
        TARGET
        DIRECTORIES
        "include"
        "vs"
)