CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

PROJECT(MyGM VERSION 0.7.2)
MESSAGE(STATUS "Project: ${PROJECT_NAME} ${PROJECT_VERSION}")

INCLUDE(cmake/InitMyCMake.cmake)
INIT_MYCMAKE(VERSION 0.6.5)

INIT_PROJECT()

OPTION(MYGM_USE_SIMD "Use SIMD" ON)
OPTION(MYGM_USE_SSE_4_1 "Use SSE 4.1" ON)
MESSAGE(STATUS "MYGM_USE_SIMD    : ${MYGM_USE_SIMD}")
MESSAGE(STATUS "MYGM_USE_SSE_4_1 : ${MYGM_USE_SSE_4_1}")

ADD_DEP(MyTemplate 0.7.3)

ADD_SUB_DIRS_REC(include)
ADD_SUB_DIRS_REC(src)

EXPORT_TARGETS(
        TARGET
        DIRECTORIES
        "include"
        "vs"
)