# CMakeLists.txt
CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
PROJECT(DEMO_PROJECT VERSION 1.0.0)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

# FIND_PACKAGE(MyGM 0.6.6 REQUIRED)
FIND_PACKAGE(MyGM REQUIRED)

ADD_EXECUTABLE(demo main.cpp)

TARGET_LINK_LIBRARIES(demo PUBLIC My::MyGM_core)